--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
 
 PORT = 3333
-DATABASE = mongodb://127.0.0.1:27017/tecban
+DATABASE = mongodb+srv://hack:hack@cluster-jlfym.mongodb.net/tecban?retryWrites=true&w=majority
 SECRET=123
